--- a/variety.html
+++ b/variety.html
@@ -920,6 +920,7 @@ Search
                     <li><a href="About project.html" class="text-white">About</a></li>
                     <li><a href="variety.html" class="text-white">Foods</a></li>
                     <li><a href="contact.html" class="text-white">Contact</a></li>
+                    <li><a href="cart.html" class="text-white">Cart</a></li>
                 </ul>
             </div>
         </div>
