--- a/About project.html
+++ b/About project.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="About.css">
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" style="height: 80px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand " im  href="index.html"><img src="B Images/home loggo.png" alt="" width="140" height="110"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
