--- a/admin.html
+++ b/admin.html
@@ -35,7 +35,7 @@ footer h5 {
 
 <body class="bg-light">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="height: 80px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand " im  href="index.html"><img src="B Images/home loggo.png" alt="" width="140" height="110"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,7 +135,7 @@ footer h5 {
                                     
                                 </div>
 
-                                <button type="button"  class=" bg-success btn text-light col-3 " type="submit" style="width: 20%;" data-bs-toggle="modal" data-bs-target="#submit">
+                                <button type="button"  class=" bg-success btn text-light col-3 max-auto" type="submit" style="width: 34%;" data-bs-toggle="modal" data-bs-target="#submit">
                                   Submit <form action=""></form>
                                   </button>
                                   
