--- a/boostrap login.html
+++ b/boostrap login.html
@@ -19,7 +19,7 @@ footer h5 {
 }
 
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" style="height: 80px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand " im  href="index.html"><img src="B Images/home loggo.png" alt="" width="140" height="110"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,12 +96,12 @@ Search
 </nav>
 <br>
 
-<section class="vh-100">
-  <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+<section class="vh-120">
+  <div class="container h-130">
+      <div class="row d-flex justify-content-center align-items-center h-120">
           <div class="col-md-8 col-lg-6 col-xl-5">
               <div class="card shadow-lg">
-                  <div class="card-body p-5 text-center">
+                  <div class="card-body p-8 text-center">
 
                       <h3 class="mb-5 text-primary">User Login</h3>
 
@@ -137,7 +137,7 @@ Search
                               </div>
                             </div>
                            
-<button type="button"  class="bg-success btn text-light col-3 " type="submit" style="width: 20%; margin-left: 35%;" data-bs-toggle="modal" data-bs-target="#submit">
+<button type="button"  class="bg-success btn text-light col-3 " type="submit" style="width: 37%; margin-left: 35%;" data-bs-toggle="modal" data-bs-target="#submit">
   Submit <form action=""></form>
   </button>
   
@@ -169,9 +169,11 @@ Search
 </div>
 </div>
 </section>
-
 <br>
-<footer class="bg-primary text-white mt-5 py-4">
+<br>
+<br>
+<br>
+<footer class="bg-primary text-white mt-5 py-4" style="margin-top: 10%;">
  <div class="container">
      <div class="row">
          <div class="col-md-4 mb-3">
