--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ footer h5 {
 </style>
 
 <br>
-<nav class="navbar navbar-expand-lg navbar-light bg-primary" style="height: 80px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand " im  href="index.html"><img src="B Images/home loggo.png" alt="" width="140" height="110"></a>
+      <a class="navbar-brand "   href="index.html"><img src="B Images/home loggo.png" alt="" width="140" height="110"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -108,8 +108,9 @@ footer h5 {
       </div>
     </div>
   </nav>
+  
+<br>
 
-  <br>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
