--- a/variety.html
+++ b/variety.html
@@ -128,9 +128,8 @@ Search
                       <p class="card-text" style="text-align: center; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Creamy and mildly spiced chicken curry.</p>
                       <strong style="padding-left: 15%;">Price per plate: ₹250</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;text-align: center;">★★★★★(5.0)</p>
-                      <span  style="font-size: 50px;">	&#9829;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button type="button"   class="bg-success btn text-light" type="submit" style="height: 5%; width: 55%;text-align: center;padding: 0px 12px;"  data-bs-toggle="modal" data-bs-target="#butter">
-                        Add To Cart<img width="28" height="25" src="https://img.icons8.com/ios-filled/25/add-shopping-cart.png" alt="add-shopping-cart"/><form action=""></form> 
-                        </button>
+                      <span  style="font-size: 50px;">	&#9829;</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a href="#" class="btn btn-primary btn-sm" style="vertical-align: middle;"  type="submit" data-bs-toggle="modal" data-bs-target="#butter">Add to Cart </a>
+                      <img width="28" height="25" src="https://img.icons8.com/ios-filled/25/add-shopping-cart.png" alt="add-shopping-cart"/><form action=""></form> 
                         <!-- Modal -->
                         <div class="modal fade" id="butter" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
