--- a/variety.html
+++ b/variety.html
@@ -5,9 +5,13 @@
 
 <style>
    .card-title {
+   font-size: 25px;
     color: #4CAF50;
   }
-
+.card strong{
+  margin-left: 20%;
+  text-align: center;
+}
   .card-text {
     text-align: center;
     font-family: 'Lucida Sans', sans-serif;
@@ -174,7 +178,7 @@ Search
             <h5 class="card-title text-center">Butter Chicken</h5>
             <p class="card-text">Creamy and mildly spiced chicken curry.</p>
             <strong>Price per plate: ₹250</strong>
-            <p class="card-text" style="color: gold;">★★★★★ (5.0)</p>
+            <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
             <span class="heart-icon">&#9829;</span>
             <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#butterModal">Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
@@ -207,7 +211,7 @@ Search
             <h5 class="card-title text-center">Naan & Roti</h5>
             <p class="card-text">Various types of flatbreads.</p>
             <strong>Price per piece: ₹40</strong>
-            <p class="card-text" style="color: gold;">★★★☆☆ (3.0)</p>
+            <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
             <span class="heart-icon">&#9829;</span>
             <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#naanModal">Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
@@ -240,7 +244,7 @@ Search
             <h5 class="card-title text-center">Puran Poli</h5>
             <p class="card-text">Sweet flatbread stuffed with jaggery.</p>
             <strong>Price per piece: ₹50</strong>
-            <p class="card-text" style="color: gold;">★★★★☆ (4.2)</p>
+            <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.2)</p>
             <span class="heart-icon">&#9829;</span>
             <button class="btn btn-success text-light ms-3"  data-bs-toggle="modal" data-bs-target="#poliModal">Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
@@ -273,7 +277,7 @@ Search
             <h5 class="card-title text-center">Idly</h5>
             <p class="card-text">Steamed rice cakes with chutney.</p>
             <strong>Price per piece: ₹20</strong>
-            <p class="card-text" style="color: gold;">★★★★☆ (4.0)</p>
+            <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
             <span class="heart-icon">&#9829;</span>
             <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#idlyModal">Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
@@ -341,7 +345,7 @@ Search
                       <h5 class="card-title">Chicken Noodles</h5>
                       <p class="card-text">Stir-fried noodles with vegetables or chicken.</p>
                       <strong>Price per plate: ₹120</strong>
-                      <p class="card-text" style="color: gold;">★★★☆☆ (3.0)</p>
+                      <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
                       <span class="heart-icon">&#9829;</span>
                       <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#noodlesModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -376,8 +380,8 @@ Search
                     <div class="card-body">
                       <h5 class="card-title">Fried Rice</h5>
                       <p class="card-text">Rice with vegetbles.</p>
-                      <strong>Price: ₹150</strong>
-                      <p class="card-text" style="color: gold;">★★★☆☆ (4.0)</p>
+                      <strong>Price per plate: ₹150</strong>
+                      <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (4.0)</p>
                       <span class="heart-icon">&#9829;</span>
                       <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#friedModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -413,7 +417,7 @@ Search
                       <h5 class="card-title">Manchurian</h5>
                       <p class="card-text">Fried cauliflower with sause.</p>
                       <strong>Price per plate: ₹75</strong>
-                      <p class="card-text" style="color: gold;">★★★★★ (5.0)</p>
+                      <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
                       <span class="heart-icon">&#9829;</span>
                       <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -485,7 +489,7 @@ Search
                   <h5 class="card-title">Pizza</h5>
                   <p class="card-text">Pizzas with indian toppings like paneer , cheese , chicken.</p>
                   <strong>Price per plate: ₹200</strong>
-                  <p class="card-text" style="color: gold;">★★★☆☆ (3.2)</p>
+                  <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.2)</p>
                   <span class="heart-icon">&#9829;</span>
                   <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#pizzaModal">
                     Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -521,7 +525,7 @@ Search
                   <h5 class="card-title">Pasta</h5>
                   <p class="card-text">Veggies with indian spices & creamy sauces.</p>
                   <strong>Price per plate: ₹180</strong>
-                  <p class="card-text" style="color: gold;">★★★☆☆ (3.0)</p>
+                  <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
                   <span class="heart-icon">&#9829;</span>
                   <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#pastaModal">
                     Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -557,7 +561,7 @@ Search
                   <h5 class="card-title">Lasanga</h5>
                   <p class="card-text">Indian-style lasanga with spices vegetables or meat.</p>
                   <strong>Price per plate: ₹80</strong>
-                  <p class="card-text" style="color: gold;">★★★★☆ (4.0)</p>
+                  <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
                   <span class="heart-icon">&#9829;</span>
                   <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
                     Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -624,8 +628,8 @@ Search
             <div class="card-body">
               <h5 class="card-title">Sushi</h5>
               <p class="card-text">Fusion sushi rolls like paneer sushi.</p>
-              <strong>Price: ₹280</strong>
-              <p class="card-text" style="color: gold;">★★★★★ (5.0)</p>
+              <strong>Price per plate: ₹280</strong>
+              <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
               <span class="heart-icon">&#9829;</span>
               <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -660,8 +664,8 @@ Search
             <div class="card-body">
               <h5 class="card-title">Tempura</h5>
               <p class="card-text">Fried Prawn with soy sauce.</p>
-              <strong>Price: ₹350</strong>
-              <p class="card-text" style="color: gold;">★★★☆☆ (3.4)</p>
+              <strong>Price per plate: ₹350</strong>
+              <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.4)</p>
               <span class="heart-icon">&#9829;</span>
               <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -696,8 +700,8 @@ Search
             <div class="card-body">
               <h5 class="card-title">Meat Balls</h5>
               <p class="card-text">Tasty, crispy & spicy meatballs.</p>
-              <strong>Price: ₹450</strong>
-              <p class="card-text" style="color: gold;">★★★★☆ (4.0)</p>
+              <strong>Price per plate: ₹450</strong>
+              <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
               <span class="heart-icon">&#9829;</span>
               <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -769,7 +773,7 @@ Search
                           <h5 class="card-title">Tomato Soup</h5>
                           <p class="card-text">A tangy soup made from fresh tomatoes, flavored with Indian spices like cumin, pepper.</p>
                           <strong>Price per bowl: ₹90</strong>
-                          <p class="card-text" style="color: gold;">★★★☆☆ (3.0)</p>
+                          <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
                           <span class="heart-icon">&#9829;</span>
                           <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -788,7 +792,7 @@ Search
                           <h5 class="card-title">Pepper Rasam</h5>
                           <p class="card-text">Spiced heavily with black pepper, known for its digestive and medicinal properties.</p>
                           <strong>Price per bowl: ₹130</strong>
-                          <p class="card-text" style="color: gold;">★★★★★ (5.0)</p>
+                          <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
                           <span class="heart-icon">&#9829;</span>
                           <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -807,7 +811,7 @@ Search
                           <h5 class="card-title">Chicken Soup</h5>
                           <p class="card-text">A light, spiced chicken broth with ginger, garlic, and Indian spices.</p>
                           <strong>Price per bowl: ₹180</strong>
-                          <p class="card-text" style="color: gold;">★★★★☆ (4.0)</p>
+                          <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
                           <span class="heart-icon">&#9829;</span>
                           <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
@@ -1028,9 +1032,9 @@ Search
      <!-- Login Navigation -->
 <nav class="login-nav my-4">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link bg-primary text-white" href="boostrap login.html">User Login</a></li>
-    <li class="page-item"><a class="page-link bg-primary text-white" href="admin.html">Admin Login</a></li>
-    <li class="page-item"><a class="page-link bg-primary text-white" href="register.html">Register</a></li>
+    <li class="page-item"><a class="page-link bg-primary text-white" style="font-size: 22px;" href="boostrap login.html">User Login</a></li>
+    <li class="page-item"><a class="page-link bg-primary text-white" style="font-size: 22px;" href="admin.html">Admin Login</a></li>
+    <li class="page-item"><a class="page-link bg-primary text-white" style="font-size: 22px;" href="register.html">Register</a></li>
   </ul>
 </nav>
         
