--- a/variety.html
+++ b/variety.html
@@ -1051,17 +1051,27 @@ Search
       </div>
       <div class="col-md-4 mb-3">
         <h5>Follow Us</h5>
-        <a href="#" class="text-white me-3"><i class="bi bi-whatsapp"></i></a>
-        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="text-white me-3"><i class="bi bi-twitter"></i></a>
+        <a href="#" class="text-white me-3">
+          <img width="25" height="25" src="https://img.icons8.com/ios-filled/25/FFFFFF/whatsapp--v1.png" alt="whatsapp--v1"/>
+          </a>
+        <a href="#" class="text-white me-3">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"  width="24" height="24" alt="Facebook"/>
+        </a>
+        <a href="#" class="text-white me-3">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"  width="24" height="24" alt="Instagram"/>
+        </a>
+        <a href="#" class="text-white me-3">
+            <img src="https://img.icons8.com/ios-filled/50/ffffff/twitter.png"  width="24" height="24" alt="Twitter"/>
+        </a>
       </div>
       <div class="col-md-4 mb-3">
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white">Home</a></li>
-          <li><a href="#" class="text-white">About</a></li>
-          <li><a href="#" class="text-white">Foods</a></li>
+          <li><a href="index.html" class="text-white">Home</a></li>
+          <li><a href="About project.html" class="text-white">About</a></li>
+          <li><a href="variety.html" class="text-white">Foods</a></li>
+          <li><a href="contact.html" class="text-white">Contact</a></li>
+          <li><a href="cart.html" class="text-white">Cart</a></li>
         </ul>
       </div>
     </div>
