--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@ footer h5 {
                         <li><strong></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  R.P Pudur, Namakkal,</li>
                         <li><strong></strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tamil Nadu 637001.</li>
                         <li><strong>Phone:</strong> +91 98765 43210</li>
-                        <li><strong>Email:</strong> contact@indianrestaurant.com</li>
+                        <li><strong>Email:</strong> indianrestaurant@gmail.com</li>
                         <li><strong>Opening Hours:</strong> Mon - Sun: 10:00 AM - 10:00 PM</li>
                     </ul>
                 </div>
