--- a/variety.html
+++ b/variety.html
@@ -343,7 +343,7 @@ Search
                   <div class="card">
                     <img src="B Images/chicken noodles.jpg" class="card-img-top" alt="chicken noodles">
                     <div class="card-body">
-                      <h5 class="card-title">Chicken Noodles</h5>
+                      <h5 class="card-title" style="text-align: center;">Chicken Noodles</h5>
                       <p class="card-text">Stir-fried noodles with vegetables or chicken.</p>
                       <strong>Price per plate: ₹120</strong>
                       <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
@@ -379,7 +379,7 @@ Search
                   <div class="card">
                     <img src="B Images/1 fried rice.jpg" class="card-img-top" alt="Tempura">
                     <div class="card-body">
-                      <h5 class="card-title">Fried Rice</h5>
+                      <h5 class="card-title" style="text-align: center;">Fried Rice</h5>
                       <p class="card-text">Rice with vegetbles.</p>
                       <strong>Price per plate: ₹150</strong>
                       <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (4.0)</p>
@@ -415,7 +415,7 @@ Search
                   <div class="card">
                     <img src="B Images/1 manchurian.jpg" class="card-img-top" alt="Meat Balls">
                     <div class="card-body">
-                      <h5 class="card-title">Manchurian</h5>
+                      <h5 class="card-title" style="text-align: center;">Manchurian</h5>
                       <p class="card-text">Fried cauliflower with sause.</p>
                       <strong>Price per plate: ₹75</strong>
                       <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
@@ -487,7 +487,7 @@ Search
               <div class="card">
                 <img src="B Images/pizza.avif" class="card-img-top" alt="pizza">
                 <div class="card-body">
-                  <h5 class="card-title">Pizza</h5>
+                  <h5 class="card-title" style="text-align: center;">Pizza</h5>
                   <p class="card-text">Pizzas with indian toppings like paneer , cheese , chicken.</p>
                   <strong>Price per plate: ₹200</strong>
                   <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.2)</p>
@@ -523,7 +523,7 @@ Search
               <div class="card">
                 <img src="B Images/1 pasta.jpg" class="card-img-top" alt="pasta">
                 <div class="card-body">
-                  <h5 class="card-title">Pasta</h5>
+                  <h5 class="card-title" style="text-align: center;">Pasta</h5>
                   <p class="card-text">Veggies with indian spices & creamy sauces.</p>
                   <strong>Price per plate: ₹180</strong>
                   <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
@@ -559,7 +559,7 @@ Search
               <div class="card">
                 <img src="B Images/lasanga.jpg" class="card-img-top" alt="lasanga">
                 <div class="card-body">
-                  <h5 class="card-title">Lasanga</h5>
+                  <h5 class="card-title" style="text-align: center;">Lasanga</h5>
                   <p class="card-text">Indian-style lasanga with spices vegetables or meat.</p>
                   <strong>Price per plate: ₹80</strong>
                   <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
@@ -627,7 +627,7 @@ Search
           <div class="card">
             <img src="B Images/sushi.jpg" class="card-img-top" alt="Sushi">
             <div class="card-body">
-              <h5 class="card-title">Sushi</h5>
+              <h5 class="card-title" style="text-align: center;">Sushi</h5>
               <p class="card-text">Fusion sushi rolls like paneer sushi.</p>
               <strong>Price per plate: ₹280</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
@@ -663,7 +663,7 @@ Search
           <div class="card">
             <img src="B Images/1 Tempura.jpg" class="card-img-top" alt="Tempura">
             <div class="card-body">
-              <h5 class="card-title">Tempura</h5>
+              <h5 class="card-title" style="text-align: center;">Tempura</h5>
               <p class="card-text">Fried Prawn with soy sauce.</p>
               <strong>Price per plate: ₹350</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.4)</p>
@@ -699,7 +699,7 @@ Search
           <div class="card">
             <img src="B Images/meat balls.jpg" class="card-img-top" alt="Meat Balls">
             <div class="card-body">
-              <h5 class="card-title">Meat Balls</h5>
+              <h5 class="card-title" style="text-align: center;">Meat Balls</h5>
               <p class="card-text">Tasty, crispy & spicy meatballs.</p>
               <strong>Price per plate: ₹450</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
@@ -771,7 +771,7 @@ Search
                       <div class="card">
                         <img src="B Images/tomato soup.jpg" class="card-img-top" alt="Tomato Soup">
                         <div class="card-body">
-                          <h5 class="card-title">Tomato Soup</h5>
+                          <h5 class="card-title" style="text-align: center;">Tomato Soup</h5>
                           <p class="card-text">A tangy soup made from fresh tomatoes, flavored with Indian spices like cumin, pepper.</p>
                           <strong>Price per bowl: ₹90</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
@@ -790,7 +790,7 @@ Search
                       <div class="card">
                         <img src="B Images/pepper rasam.jpg" class="card-img-top" alt="Pepper Rasam">
                         <div class="card-body">
-                          <h5 class="card-title">Pepper Rasam</h5>
+                          <h5 class="card-title" style="text-align: center;">Pepper Rasam</h5>
                           <p class="card-text">Spiced heavily with black pepper, known for its digestive and medicinal properties.</p>
                           <strong>Price per bowl: ₹130</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
@@ -809,7 +809,7 @@ Search
                       <div class="card">
                         <img src="B Images/chicken soup.jpg" class="card-img-top" alt="Chicken Soup">
                         <div class="card-body">
-                          <h5 class="card-title">Chicken Soup</h5>
+                          <h5 class="card-title" style="text-align: center;">Chicken Soup</h5>
                           <p class="card-text">A light, spiced chicken broth with ginger, garlic, and Indian spices.</p>
                           <strong>Price per bowl: ₹180</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
@@ -913,7 +913,7 @@ Search
                   <div class="card" style="width: 18rem;">
                     <img src="B Images/1 panipuri.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Pani Puri</h5>
+                      <h5 class="card-title" style="text-align: center;">Pani Puri</h5>
                       <p class="card-text">Crisp puris filled with spiced water and tamarind chutney.</p>
                       <strong>Price per plate: ₹50</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★★☆(4.0)</p>
@@ -952,7 +952,7 @@ Search
                   <div class="card" style="width: 18rem;">
                     <img src="B Images/1 pav bhaji.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Pav Bhaji</h5>
+                      <h5 class="card-title" style="text-align: center;">Pav Bhaji</h5>
                       <p class="card-text">Spiced vegetable mashed bread.</p>
                       <strong>Price per plate: ₹70</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★☆☆(3.2)</p>
@@ -989,7 +989,7 @@ Search
                   <div class="card" style="width: 18rem;">
                     <img src="B Images/samosa.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Samosa</h5>
+                      <h5 class="card-title" style="text-align: center;">Samosa</h5>
                       <p class="card-text">Deep-fried pastry filled with spiced potatoes and peas.</p>
                       <strong>Price per piece: ₹45</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★★★(5.0)</p>
