--- a/variety.html
+++ b/variety.html
@@ -21,6 +21,10 @@
     margin-bottom: 20px;
   }
 
+.card:hover {
+transform: translateY(-5px);
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
   .pagination {
     justify-content: center;
   }
