--- a/cart.html
+++ b/cart.html
@@ -106,7 +106,7 @@ footer h5 {
           <a class="nav-link active text-white fs-4 p-3" aria-current="page" href="About project.html"><img width="23" height="19" style="vertical-align: baseline;" src="https://img.icons8.com/ios-filled/20/about.png" alt="about"/>About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white  fs-4 p-3" href="variety.html"><img width="25" height="25" src="https://img.icons8.com/ios-filled/50/thanksgiving.png" alt="thanksgiving"/>Foods</a>
+          <a class="nav-link text-white  fs-4 p-3" href="variety.html"><svg fill="#080808" height="32px" width="33px" version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-3.2 -3.2 38.40 38.40" xml:space="preserve" stroke="#080808"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-3.2" y="-3.2" width="38.40" height="38.40" rx="0" fill="#0d6dfd" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#a92323" stroke-width="0.256"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M5.9,18l1.2,2.4C7.3,20.8,7.6,21,8,21h17c0.4,0,0.7-0.2,0.9-0.6l1.2-2.4H5.9z"></path> <path d="M4,17h1.4h22.2H29c0.6,0,1-0.4,1-1s-0.4-1-1-1h-1c-0.2-5.3-4.1-9.7-9.1-10.8C18.9,4,19,3.8,19,3.5C19,2.1,17.9,1,16.5,1 S14,2.1,14,3.5c0,0.3,0.1,0.5,0.1,0.7C9.1,5.3,5.3,9.7,5,15H4c-0.6,0-1,0.4-1,1S3.4,17,4,17z"></path> </g> <path d="M24.6,22.3C24.5,22.1,24.2,22,24,22c-0.4,0-0.7,0-1.1,0.1l-1.1,1.5C20.7,25.1,18.9,26,17,26h0h-0.3H16h-1.3H14 c-0.6,0-1-0.4-1-1s0.4-1,1-1h3.5c0.3-0.3,0.5-0.8,0.5-1.3c0,0,0-0.1,0-0.1c0-0.4-0.3-0.6-0.7-0.6h-4c-2.4,0-4.3,1.1-5.4,2.8 l-1.8,2.8c-0.1,0.2-0.1,0.5,0,0.7l2,3.3c0.1,0.2,0.2,0.3,0.4,0.3c0,0,0.1,0,0.1,0c0.1,0,0.3,0,0.4-0.1c2.5-1.7,5.5-2.6,8.5-2.6 c2.2,0,4.2-1.2,5.2-3.1l1.8-3.2C24.7,22.8,24.7,22.5,24.6,22.3z"></path> </g></svg>Foods</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white  fs-4 p-3" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -160,7 +160,7 @@ Search
       <button type="button" class="btn btn-primary">Okay</button>
     </div>
   </div>
-</div>
+</div>  
 </div>
       </form>
     </div>
@@ -176,7 +176,7 @@ Search
       <!-- Food Cart Section -->
       <section class="cart-section py-5">
           <div class="container">
-              <h2 class="text-center mb-5">Your Food Cart</h2>
+              <h2 class="text-center mb-5"><svg fill="#d9534f" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="37px" height="37px" viewBox="-36.21 -36.21 434.47 434.47" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"><rect x="-36.21" y="-36.21" width="434.47" height="434.47" rx="104.2728" fill="#ffffff" strokewidth="0"></rect></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M39.697,136.466l90.905,65.659c0,0-11.219-52.193-39.845-107.182C90.764,94.943,46.432,116.262,39.697,136.466z"></path> <path d="M43.625,277.313l86.983,82.496V211.101l-90.911-69.587C31.849,183.042,43.625,277.313,43.625,277.313z"></path> <path d="M248.446,68.288V11.894c0-7.438-5.98-12.711-13.366-11.789l-127.306,16c-7.39,0.922-13.363,7.712-13.363,15.152v58.916 c0,0,38.721,72.391,47.982,136.363c9.252,63.973-8.424,135.515-8.424,135.515l168.347-49.663c0,0,39.562-57.238,14.31-134.677 C291.381,100.274,248.446,68.288,248.446,68.288z M204.391,56.271l-53.304,9.542c-0.855,0.155-1.705,0.222-2.54,0.222 c-6.795,0-12.833-4.862-14.065-11.792c-1.397-7.773,3.784-15.213,11.56-16.602l53.307-9.536 c7.771-1.388,15.211,3.785,16.605,11.56C217.354,47.448,212.173,54.88,204.391,56.271z"></path> </g> </g> </g></svg>Your Food Cart</h2>
   
               <!-- Cart Items Row -->
               <div class="row justify-content-center">
