Update modal targets in variety.html for sushi, tempura, meat, tomato, pepper, chicken, pani, pav, samosa

--- a/variety.html
+++ b/variety.html
@@ -638,7 +638,7 @@ Search
               <strong>Price per plate: ₹280</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
               <span class="heart-icon">&#9829;</span>
-              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
+              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#sushiModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                   <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                 </svg>
@@ -674,7 +674,7 @@ Search
               <strong>Price per plate: ₹350</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.4)</p>
               <span class="heart-icon">&#9829;</span>
-              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
+              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#tempuraModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                   <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                 </svg>
@@ -710,7 +710,7 @@ Search
               <strong>Price per plate: ₹450</strong>
               <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
               <span class="heart-icon">&#9829;</span>
-              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#manchurianModal">
+              <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#meatModal">
                 Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                   <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                 </svg>
@@ -782,7 +782,7 @@ Search
                           <strong>Price per bowl: ₹90</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★☆☆ (3.0)</p>
                           <span class="heart-icon">&#9829;</span>
-                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#tomatoModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                             </svg>
@@ -801,7 +801,7 @@ Search
                           <strong>Price per bowl: ₹130</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★★★ (5.0)</p>
                           <span class="heart-icon">&#9829;</span>
-                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#pepperModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                             </svg>
@@ -820,7 +820,7 @@ Search
                           <strong>Price per bowl: ₹180</strong>
                           <p class="card-text" style="color: gold;font-size: 22px;">★★★★☆ (4.0)</p>
                           <span class="heart-icon">&#9829;</span>
-                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                          <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#chickenModal">
                             Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                               <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                             </svg>
@@ -924,13 +924,13 @@ Search
                       <strong>Price per plate: ₹50</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★★☆(4.0)</p>
                       <span class="heart-icon" onclick="toggleHeart(this)">&#9829;</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#paniModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                           <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                         </svg>
                       </button>
                       <!-- Modal -->
-                      <div class="modal fade" id="pani" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" id="paniModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -963,13 +963,13 @@ Search
                       <strong>Price per plate: ₹70</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★☆☆(3.2)</p>
                       <span class="heart-icon" onclick="toggleHeart(this)">&#9829;</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#pavModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                           <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                         </svg>
                       </button>
                       <!-- Modal -->
-                      <div class="modal fade" id="pav" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" id="pavModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
@@ -1000,13 +1000,13 @@ Search
                       <strong>Price per piece: ₹45</strong>
                       <p class="card-text" style="color: gold;font-size: 25px;">★★★★★(5.0)</p>
                       <span class="heart-icon" onclick="toggleHeart(this)">&#9829;</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#lasangaModal">
+                      <button class="btn btn-success text-light ms-3" data-bs-toggle="modal" data-bs-target="#samosaModal">
                         Add To Cart <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                           <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                         </svg>
                       </button>
                       <!-- Modal -->
-                      <div class="modal fade" id="samosa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" id="samosaModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
